--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "jsonwebtoken": "^5.4.1",
     "less": "^2.5.3",
     "less-middleware": "1.0.x",
+    "mongoose": "^4.2.9",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
