--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-jwt": "^3.3.0",
     "jsonwebtoken": "^5.4.1",
     "less": "^2.5.3",
     "less-middleware": "1.0.x",
