Use email to login [ Fixed ] ( not username )

--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-[{"description":"[ REVISAR ] No puedo usar email como nombre del input para logearme, debo usar username","completed":false}]
+[{"description":"Cambiar contraseña no funciona","completed":false},{"description":"[ REVISAR ] No puedo usar email como nombre del input para logearme, debo usar username","completed":true}]
