--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "voting-app",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "ejs": "~2.3.3",
-    "express": "~4.13.1",
-    "express-jwt": "^3.3.0",
-    "jsonwebtoken": "^5.4.1",
-    "less": "^2.5.3",
-    "less-middleware": "1.0.x",
-    "mongoose": "^4.2.9",
-    "morgan": "~1.6.1",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "serve-favicon": "~2.3.0"
-  }
+	"name": "voting-app",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"start": "nodemon ./bin/www"
+	},
+	"dependencies": {
+		"body-parser": "~1.13.2",
+		"cookie-parser": "~1.3.5",
+		"debug": "~2.2.0",
+		"ejs": "~2.3.3",
+		"express": "~4.13.1",
+		"express-jwt": "^3.3.0",
+		"jsonwebtoken": "^5.4.1",
+		"less": "^2.5.3",
+		"less-middleware": "1.0.x",
+		"mongoose": "^4.2.9",
+		"morgan": "~1.6.1",
+		"passport": "^0.3.2",
+		"passport-local": "^1.0.0",
+		"serve-favicon": "~2.3.0"
+	}
 }
